created layout for edit note

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
 
     <!-- Main List Long Click Context Menu -->
     <string name="edit_menu">Edit</string>
+
+    <string name="save_note">Save Note</string>
 </resources>
